# KRONOS-JOHN

./: .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
rover/: .dockerignore  Dockerfile
rover/balena_configs/: balena_start.sh
rover/configs/: Extrinsic_640_360_C.yaml  Intrinsic_640_360.yaml  Intrinsic_640_480.yaml  bot.launch.py  bot_local.launch.py  cams_conf.yaml  cams_conf_local.yaml  can_config.sh  local_env_vars.sh  ros2pub  startBot  startBot.sh  startFreedomAgent.sh  startXHost.sh  stitcher_config.npz
rover/configs/freedom_robotics/: inject_freedom.py  keep_alive_freedom.py
rover/ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rover/ros2/install/video_mapping/share/video_mapping/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rover/ros2/install/vision/lib/vision/: video_mapping
rover/ros2/install/vision/share/vision/: package.ps1  package.sh
rover/ros2/log/: latest_build
rover/ros2/src/: README.md
rover/ros2/src/bosch_imu/: package.xml  parameters.yaml  setup.cfg  setup.py
rover/ros2/src/bosch_imu/bosch_imu/: imu_node.py
rover/ros2/src/bosch_imu/bosch_imu/utils/: transformations.py
rover/ros2/src/bosch_imu/launch/: node.launch.py
rover/ros2/src/can_test/: CMakeLists.txt  package.xml
rover/ros2/src/can_test/include/can_test/: can_test.hpp
rover/ros2/src/can_test/include/can_test/modules/: chassis.hpp
rover/ros2/src/can_test/launch/: node_can_test.launch.py
rover/ros2/src/can_test/lib/: socket_can.cpp
rover/ros2/src/can_test/src/: can_test.cpp  main.cpp
rover/ros2/src/can_test/src/modules/: chassis.cpp
rover/ros2/src/canlink/: CMakeLists.txt  README.md  package.xml
rover/ros2/src/canlink/include/canlink/: CANCabin.hpp  CANChassis.hpp  socketCAN.hpp
rover/ros2/src/canlink/include/canlink/modules/: battery.hpp  chassis.hpp  lights.hpp  lock_system.hpp
rover/ros2/src/canlink/lib/: socket_can.cpp
rover/ros2/src/canlink/src/: can_cabin.cpp  can_chassis.cpp
rover/ros2/src/canlink/src/modules/: battery.cpp  chassis.cpp  lights.cpp  lock_system.cpp
rover/ros2/src/data_capture/: package.xml  setup.cfg  setup.py
rover/ros2/src/data_capture/data_capture/: data_capture_node.py  node_data_capture.py
rover/ros2/src/incredible_control/: CMakeLists.txt  package.xml
rover/ros2/src/incredible_control/include/incredible_control/: definitions.hpp
rover/ros2/src/incredible_control/src/: main.cpp
rover/ros2/src/local_client/: package.xml  setup.cfg  setup.py
rover/ros2/src/local_client/local_client/: node_local_client.py
rover/ros2/src/motion_control/: CMakeLists.txt  package.xml
rover/ros2/src/motion_control/include/motion_control/: soft_speed_spline.hpp  speed_controller.hpp
rover/ros2/src/motion_control/src/: motion_control_speed.cpp  soft_speed_spline.cpp  speed_controller.cpp
rover/ros2/src/python_utils/: package.xml  setup.cfg  setup.py
rover/ros2/src/python_utils/python_utils/: pysubscribers.py
rover/ros2/src/skynet/: package.xml  setup.cfg  setup.py
rover/ros2/src/skynet/skynet/: node_skynet_object_detector.py
rover/ros2/src/supervisor/: CMakeLists.txt  package.xml
rover/ros2/src/supervisor/include/supervisor/: supervisor.hpp
rover/ros2/src/supervisor/launch/: kiwibot.launch.py
rover/ros2/src/supervisor/src/: main.cpp  supervisor.cpp
rover/ros2/src/ublox/ublox_gps/: CMakeLists.txt  package.xml
rover/ros2/src/ublox/ublox_gps/config/: neo_m8n_kiwibot.yaml
rover/ros2/src/ublox/ublox_gps/include/ublox_gps/: ublox_firmware7plus.hpp
rover/ros2/src/ublox/ublox_gps/launch/: ublox_gps_node-launch.py
rover/ros2/src/ublox/ublox_gps/src/: node.cpp  ublox_firmware8.cpp
rover/ros2/src/usr_msg/: CMakeLists.txt  package.xml
rover/ros2/src/usr_msgs/: CMakeLists.txt  package.xml
rover/ros2/src/usr_msgs/msg/canlink/: ChassisState.msg  Configuration.msg  Motors.msg  PWMOut.msg  TestMotors.msg
rover/ros2/src/usr_msgs/msg/data_capture/: CaptureStatus.msg
rover/ros2/src/usr_msgs/msg/vision/: CamerasStatus.msg  Extrinsic.msg  Intrinsic.msg  Waypoint.msg
rover/ros2/src/usr_msgs/msg/web_client/: Control.msg  Messages.msg
rover/ros2/src/usr_srv/: CMakeLists.txt  package.xml
rover/ros2/src/usr_srv/srv/: Extrinsic.srv  Intrinsic.srv
rover/ros2/src/usr_srvs/: CMakeLists.txt  package.xml
rover/ros2/src/utils/: CMakeLists.txt  package.xml
rover/ros2/src/utils/include/utils/: console.hpp
rover/ros2/src/utils/lib/: console.cpp
rover/ros2/src/video_mapping/: CMakeLists.txt  package.xml
rover/ros2/src/video_mapping/msg/: Zoom.msg
rover/ros2/src/video_mapping/src/: video_mapping_node.py
rover/ros2/src/video_mapping/src/calibration/: calibration_utils.py
rover/ros2/src/video_mapping/src/local_gui/: high_gui_class.py
rover/ros2/src/video_mapping/src/stitching/: stitcher.py
rover/ros2/src/video_mapping/src/utils/: cameras.py  cams_config.yaml
rover/ros2/src/video_mapping/srv/: CamerasStatus.srv  GetDeadView.srv
rover/ros2/src/vision/: README.md  package.xml  setup.py
rover/ros2/src/vision/vision/: node_local_console.py  node_video_calibrator.py  node_video_local_console.py  node_video_mapping.py  node_video_particle.py  video_mapping.py
rover/ros2/src/vision/vision/extrinsic/: calibration.py  extrinsic_utils.py
rover/ros2/src/vision/vision/intrinsic/: intrinsic_utils.py
rover/ros2/src/vision/vision/scripts/: cams_handler_test.py  extrinsic_color_tunner.py
rover/ros2/src/vision/vision/stitcher/: stitcher.py  stitching_class.py
rover/ros2/src/vision/vision/test/: cams_handler_test.py
rover/ros2/src/vision/vision/tmp/: node_utils.py
rover/ros2/src/vision/vision/usr_interface/: graphics.py
rover/ros2/src/vision/vision/utils/: cam_handler.py  cams_conf.yaml  cams_conf_local.yaml  vision_utils.py
rover/ros2/src/vision/vision/video_mapping/: cams_handler_test.py  video_mapping.py
rover/ros2/src/wheel_odometry/: CMakeLists.txt  package.xml
rover/ros2/src/wheel_odometry/src/: main.cpp  wheel_odometry.cpp
(+1 files in other folders)
